<resources>
    <string name="app_name">Wrap Roulette</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="statistics">Statistics</string>
    <string name="chat">Chat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalidEmailAddressHelper">Invalid Email Address</string>
    <string name="logout">Logout</string>
    <string name="join_pool">Join Pool</string>
    <string name="new_pool">New Pool</string>
    <string name="pools">Your Pools</string>
    <string name="account">Account</string>
    <string name="add_member">Add Member</string>
    <string name="edit_pool">Edit Pool</string>
    <string name="leave_pool">Leave Pool</string>
    <string name="membersHeaderTitle">Members</string>
    <string name="finalBetsHeaderTitle">Final Bets</string>
    <string name="betsHeaderTitle">Bets</string>
    <string name="administratorHeaderTitle">Administrator</string>
    <string name="currentTimeTitle">Current Time</string>
    <string name="timeWorkedTitle">Time Worked</string>
    <string name="wrapTimeHeaderTitle">Wrap Time</string>
    <string name="startTimeTitle">Start Time</string>
    <string name="positionTitle">Position</string>
    <string name="currentBetTitle">Current Bet</string>
    <string name="memberBidsTitle">Member Bids</string>
    <string name="marginHeaderTitle">Margin</string>
    <string name="adminHeaderTitle">Admin</string>
    <string name="totalPotHeaderTitle">Total Pot</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="clickToSignUp">Not registered? Click to signup</string>
    <string name="signIn">Sign In</string>
    <string name="typeYourPassword">Type your password</string>
    <string name="typeYourEmail">Type your email</string>
    <string name="roulette">Roulette</string>
    <string name="wrap">Wrap</string>
    <string name="logoHeaderImage">Logo header image</string>
    <string name="resetPasswordTitle">Reset Password</string>
    <string name="resetPasswordSubtitle">Enter your email address to reset your password.</string>
    <string name="reset">Reset</string>
    <string name="backButtonDescription">Back image</string>
    <string name="signUpTitle">Sign Up</string>
    <string name="signUpSubtitle">Enter your details to register</string>
    <string name="typeYourName">Type your name</string>
    <string name="enterYourDepartment">Enter your department</string>
    <string name="signUp">Sign Up</string>
    <string name="productionName">Production</string>
    <string name="poolPassword">Password</string>
    <string name="date">Date</string>
    <string name="join">Join</string>
    <string name="startTime">Start time</string>
    <string name="finalBets">Final bets</string>
    <string name="price">Price</string>
    <string name="margin">Margin</string>
    <string name="priceIsRightRules">Price Is Right Rules</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <string name="name">Name</string>
    <string name="department">Department</string>
    <string name="email">Email</string>
    <string name="joinPoolHeaderImage">Join pool header image</string>
    <string name="joinPoolSubtitle">Enter the details of the pool you wish to join. Inputs are case sensitive.</string>
    <string name="addPoolSubtitleText">Create a new pool below. Users can join using the name, password and date inputs.</string>
    <string name="editPoolSubtitleText">Edit your pool details below. Users can join using the name, password and date inputs.</string>
    <string name="pirInfoImageDescription">Price is right rules info image</string>
    <string name="tempMemberOptionDialogMessage">Select EDIT to modify member’s details, or select BET to place their bid.</string>
    <string name="memberOptionsDialogTitle">Member Options</string>
    <string name="setMemberBetTimeDialogTitle">Set Members Bet Time</string>
    <string name="bettingMarginDialogTitle">Betting Margin</string>
    <string name="bettingMarginDialogMessage">Time added to each bet, in 6-minute increments. If 0, only the closest bid will win.</string>
    <string name="minutesDialogSpinnerText">/ Minutes</string>
    <string name="poolDateDialogTitle">Set Bet Time</string>
    <string name="poolDateDialogMessage">Set the pools date according to the call sheet.</string>
    <string name="bidPriceDialogTitle">Bid Price</string>
    <string name="bidPriceDialogMessage">Set the betting price for this pool.</string>
    <string name="dollarSignImageDescription">Dollar sign image for spinner price</string>
    <string name="memberNameHint">Member name</string>
    <string name="memberEmailHint">Member email</string>
    <string name="memberDepartmentHint">Member department</string>
    <string name="createTempMemberDialogMessage">Enter temporary pool members details below.</string>
    <string name="editTempMemberDialogMessage">Edit %s\'s member details.</string>
    <string name="addMemberDialogTitle">Add Member</string>
    <string name="editMemberDialogTitle">Edit Member</string>
    <string name="totalWinningsTitle">Total Winnings</string>
    <string name="totalPoolsTitle">Total Pools</string>
    <string name="totalBetsTitle">Total Bets</string>
    <string name="actions">Actions</string>
    <string name="createPoolFabDescription">Create pool fab</string>
    <string name="joinPoolFabDescription">Join pool fab</string>
    <string name="noSavedPoolsText">No Saved Pools</string>
    <string name="poolStatusImageDescription">Pool status image</string>
    <string name="poolAdminImageDescription">Pool admin image</string>
    <string name="poolLoadedImageDescription">Pool loaded image</string>
    <string name="tempMemberIconDescription">Temporary member icon</string>
    <string name="memberProfileImageDescription">Member profile image</string>
    <string name="tempMemberOptionsImageDescription">Admin temporary member options icon</string>
    <string name="chatProfileImageDescription">Chat message profile image</string>
    <string name="noActivePoolText">No Active Pool</string>
    <string name="setWrapTimeFabDescription">Set pool wrap time fab</string>
    <string name="placeBetFabDescription">Place bet fab</string>
    <string name="homeFragmentTabLayoutDescription">Home fragment tabs</string>
    <string name="bidAmountDialogTitle">Bid Amount</string>
    <string name="poolAdminDialogTitle">Pool Administrator</string>
    <string name="bettingMarginDialogPoolMessage">The current margin is %s minutes for this pool. This time is added to any bets made.</string>
    <string name="poolAdminDialogMessage">The administrator for this pool is %s. They are responsible for setting rules, adding temporary members and entering the wrap time.</string>
    <string name="priceIsRightRulesDialogMessage">“The Price Is Right” rules designate a winner with the closest bet time to the wrap time without going over. For this pool the admin has set this to %s.</string>
    <string name="bidAmountDialogMessage">The admin has set the bid price as $%s.00 for this pool.</string>
    <string name="messageHint">Message</string>
    <string name="sendFabDescription">Send message fab</string>
    <string name="adminIconDescription">Admin icon image</string>
    <string name="poolMemberIconDescription">Pool member icon</string>
    <string name="poolBetsIconDescription">Pool bets icon</string>
    <string name="bidCardViewTitle">Bid</string>
    <string name="pirIconDescription">Price is right state icon</string>
    <string name="poolAdminPictureDescription">Pool admin profile picture</string>
    <string name="startTimeIconDescription">Start time icon</string>
    <string name="wrapTimeIconDescription">Wrap time icon</string>
    <string name="positionIconDescription">Position icon</string>
    <string name="betTimeIconDescription">Bet time icon</string>
    <string name="winnerEmailDialogTitle">%s\'s Email:</string>
    <string name="save">Save</string>
    <string name="profilePictureDescription">Profile picture</string>
    <string name="changePictureIconDescription">Change picture icon</string>
    <string name="settings">Settings</string>
    <string name="invite">Invite</string>
    <string name="noNetworkCantUpdateMessage">No network connection, please reconnect before applying changes.</string>
    <string name="noNetworkCantJoinMessage">No network connection, reconnect to join pool.</string>
    <string name="accountSettings">Account Settings</string>
    <string name="joinPool">Join Pool</string>
    <string name="sendFeedbackDialogTitle">Send Feedback</string>
    <string name="sendFeedbackDialogMessage">Are you experiencing issues with this app or have suggestions to improve your experience? Let us know below.</string>
    <string name="feedback">Feedback</string>
    <string name="feedbackDialogEmptyErrorToast">Please enter your message before sending.</string>
    <string name="feedbackDialogSuccessToast">Thanks for sharing your feedback!</string>
    <string name="share">Share</string>
    <string name="inviteEmailIntentSubject">Welcome to Wrap Roulette</string>
    <string name="inviteEmailIntentMessage">Ready to put your money where your mouth is? Join the Wrap Roulette community to start placing your bets. \n\n</string>
    <string name="inviteIntentTitle">Share Via</string>
    <string name="send">Send</string>
    <string name="newPool">New Pool</string>
    <string name="editPool">Edit Pool</string>
    <string name="bet">Bet</string>
    <string name="joinPoolErrorMultiplePools">Multiple pools have the same credentials, contact administrator to change pool values.</string>
    <string name="joinPoolErrorNoResults">No pool found matching the provided credentials.</string>
    <string name="poolExistsErrorMessage">Pool already exists.</string>
    <string name="alreadyPoolMemberErrorMessage">You are already a member of this pool.</string>
    <string name="memberExistsErrorMessage">Member already exists.</string>
    <string name="imagePermissionsNeededErrorMessage">You need to grant permissions to select a new profile image.</string>
    <string name="enterEmailErrorMessage">Please enter your email address.</string>
    <string name="emailNotValidErrorMessage">Email address is not valid.</string>
    <string name="resetEmailSentMessage">Reset link has been sent to your email address.</string>
    <string name="enterPasswordErrorMessage">Please enter a password.</string>
    <string name="enterNameErrorMessage">Please enter your name.</string>
    <string name="enterDepartmentErrorMessage">Please enter your department.</string>
    <string name="savedSuccessfullyMessage">Saved Successfully!</string>
    <string name="noNetworkUpdateDelayMessage">Unable to connect to network, your changes will apply when reconnected.</string>
    <string name="poolFinishedCantUpdateMemberMessage">This pool has finished, you are unable to make changes at this time.</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="bettingLockedPoolActiveCantRemoveMemberMessage">Betting has locked and pool is still active, you are unable to remove this member at this time.</string>
    <string name="clearBetBeforeLeavingMessage">You need to clear your bet before leaving this pool.</string>
</resources>