<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_casino_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_pools"
            android:icon="@drawable/ic_baseline_subscriptions_24"
            android:title="@string/pools" />

        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_baseline_manage_accounts_24"
            android:title="@string/account" />
    </group>

    <item android:title="@string/share">
        <menu>
            <item
                android:id="@+id/nav_invite"
                android:icon="@drawable/ic_baseline_share_24"
                android:title="@string/invite" />

            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_baseline_contact_support_24"
                android:title="@string/feedback" />
        </menu>
    </item>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_baseline_logout_24"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>