<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/actionAddMember"
        android:icon="@drawable/ic_baseline_add_24"
        android:orderInCategory="100"
        android:title="@string/add_member"
        app:showAsAction="never" />
    <item
        android:id="@+id/actionEditPool"
        android:icon="@drawable/ic_baseline_edit_24"
        android:orderInCategory="101"
        android:title="@string/edit_pool"
        app:showAsAction="never" />
    <item
        android:id="@+id/actionLeavePool"
        android:icon="@drawable/ic_baseline_edit_24"
        android:orderInCategory="102"
        android:title="@string/leave_pool"
        app:showAsAction="never" />
</menu>