<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <TextView
                android:id="@+id/title"
                style="@style/DialogTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bettingMarginDialogTitle"
                app:layout_constraintBottom_toTopOf="@+id/message"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/message"
                style="@style/DialogMessageStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bettingMarginDialogMessage"
                app:layout_constraintBottom_toTopOf="@+id/numberPickerMinutes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <NumberPicker
                android:id="@+id/numberPickerMinutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/NumberPickerTheme"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/message"
                app:minValue="@{0}"
                app:value="@{0}"
                app:wrapSelectorWheel="@{true}" />

            <TextView
                style="@style/DialogSpinnerTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minutesDialogSpinnerText"
                app:layout_constraintBottom_toBottomOf="@+id/numberPickerMinutes"
                app:layout_constraintStart_toEndOf="@+id/numberPickerMinutes"
                app:layout_constraintTop_toTopOf="@+id/numberPickerMinutes" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>