<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="ca.veltus.wraproulette.authentication.LoginSignupViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.home.dialog.AddMemberDialogFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <TextView
                android:id="@+id/title"
                style="@style/DialogTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sendFeedbackDialogTitle"
                app:layout_constraintBottom_toTopOf="@+id/message"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/message"
                style="@style/DialogMessageStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:text="@string/sendFeedbackDialogMessage"
                app:layout_constraintBottom_toTopOf="@id/sendFeedbackTextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintVertical_chainStyle="packed" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sendFeedbackTextInputLayout"
                style="@style/AccountTextInputOuterFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="12dp"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/color_state_text_input_hint_text"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="1dp"
                app:hintEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/message">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sendFeedbackTextEditText"
                    style="@style/AccountTextInputInnerFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    android:hint="@string/messageHint"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLines="8"
                    android:minLines="4"
                    android:singleLine="false"
                    android:text="@={viewModel.feedbackMessage}"
                    android:textColor="@color/blueDark"
                    android:textColorHint="@color/poolHintTextColor"
                    tools:ignore="Autofill" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>